# ttrack

./: .gitignore  README.md
Calculator/: CMakeLists.txt  calculator.cpp  calculator.h  error_functions.cpp  error_functions.h  grammar.cpp  grammar.h  main.cpp  text_colors.h
Onegin/: CMakeLists.txt  error_functions.c  error_functions.h  main.c  text_functions.c  text_functions.h
SquareSolver/: main.c
StackCPP/: error_functions.cpp  error_functions.h  main.cpp  stack_functions.h  stack_functions.inl
